# weatherPredictCUDA

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  forecast.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: cuda_rtx5090.md
results/ankara_2026_daily_backtest/: point_daily_metrics.csv  point_summary.csv  report.md  timing_device.json
results/pilot_2012_cuda5090/: accuracy_attempt_report.md  accuracy_smoke_metrics.csv  accuracy_smoke_timing_device.json
results/pilot_2012_cuda5090/sensitivity_istanbul/: sensitivity_channel_norms.csv  sensitivity_finite_difference.csv  sensitivity_timing_device.json  sensitivity_top_locations.csv
scripts/: 01_evaluation.py  02_sensitivity.py  03_hurricane.py  04_cuda_accuracy_benchmark.py  05_cuda_sensitivity_benchmark.py  06_ankara_rolling_backtest.py
src/keisler_2022/: __init__.py  benchmarks.py  config.py  gnn.py  graphs.py  io.py  runner.py  solar.py
src/keisler_2022/data/: README.md
tests/: __init__.py  test_benchmarks.py  test_config.py  test_graphs.py  test_runner.py  test_solar.py
